colocando novo botao

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <p>Marge é a mãe da família, reconhecida pelo seu cabelo azul e sua paciência. Ela é o pilar da casa, cuidando da família com dedicação e tentando manter a ordem diante das confusões causadas por Homer e Bart. Marge é carinhosa, responsável e sempre busca o melhor para seus filhos.</p>
             </div>
              <div class="bartDiv">
-                <img src="img/image.png" alt="" class="fotobart">
+                <img src="img/bart.png" alt="" class="fotobart">
                 <h2>Bart Simpson</h2>
                 <p>Bart é o filho mais velho, um garoto cheio de energia e travessuras. Ele adora pregar peças, fugir das regras e causar confusões, especialmente na escola. Apesar de ser um verdadeiro rebelde, Bart tem um coração bondoso e demonstra amor pela família nos momentos certos.</p>
             </div>
@@ -32,6 +32,9 @@
     </main>
     <footer>
         <p>Ana Claudia Moura Soares</p>
+          <a href="https://www.linkedin.com/in/anaclaudiamoura8/" target="_blank"> 
+              <butto><img src="img/image.png" alt="" class="redes"></button>
+          </a>
     </footer>
 
 
